--- a/index.html
+++ b/index.html
@@ -7,26 +7,43 @@
 
     <h2 id="heading">DOM Manipulation Exercises</h3>
     <h4>Task 2 a</h4>
-    <div id="task2a"></div>
+    <button onclick="addText(event)" >AddText</button>
+    <div id="Task2a"></div>
 
     <h4>Task 2 b</h4>
+    <button id="Red" onclick="changeColor(event,'red')"> Red</button>
+    <button id="Green" onclick="changeColor(event,'Green')"> Red</button>
+  
 
 
     <h4>Task 2 c</h4>
+
+    <button onclick="redirect(event)">Go to Google</button>
 
 
     <!-- ***** -->
     <h3>With jQuery</h3>
     <h4>Task 4 a</h4>
-    <div id="task4a"></div>
+    <button id = "addText">
+    <div id="Task4a"></div>
 
     <h4>Task 4 b</h4>
 
+    <button class="bgBtn">Red</button>
+    <button class="bgBtn">Green</button>
+    <div id >
+
 
     <h4>Task 4 c</h4>
+    <input id = "firstInput">
+    <input id = "secondInput">
+    <button id = "sum">ADD</button>
+    <p>The sum is <span id = "result"></span><p>
 
 
     <!-- Insert your JavaScript file -->
+    <script src = "jquery-3.3.1.min.js"></script>
+    <script src = "script.js"> </script> 
 
   </body>
 </html>
